third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_value2.exp

Diagnostics:
error: constraint `|()|_ has ..` incompatible with `integer`
  ┌─ tests/more-v1/parser/invalid_call_lhs_value2.move:3:9
  │
3 │         5();
  │         ^

error: constraint `|(integer, integer)|_ has ..` incompatible with `integer`
  ┌─ tests/more-v1/parser/invalid_call_lhs_value2.move:4:9
  │
4 │         5(0, 1);
  │         ^
